# ConsoleApp

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt  clientConsole.cpp  clientFTXUI.cpp  server.cpp  set_database.cpp
include/Chatbot/: BaseLogic.h  BuilderSQL.h  ChatBotClient.h  ChatBotServer.h  ClientLogic.h  ClientUtility.h  CmdAddGroup.h  CmdAddStudent.h  CmdAddTask.h  CmdAddVariant.h  CmdChangeGroup.h  CmdChangeStudentGroup.h  CmdChangeStudentInitials.h  CmdChangeStudentName.h  CmdChangeTask.h  CmdChangeVariant.h  CmdDeleteGroup.h  CmdDeleteStudent.h  CmdDeleteStudentsFromGroup.h  CmdDeleteTask.h  CmdDeleteVariant.h  CmdGetCameraFrame.h  CmdShowAllResults.h  CmdShowAllStudents.h  CmdShowAllTasks.h  CmdShowAllVariants.h  CmdShowGroups.h  CmdShowResultByStudentTask.h  CmdShowResultsByStudent.h  CmdShowResultsByTask.h  CmdShowStudentsFromGroup.h  CmdShowTask.h  CmdShowVariant.h  CmdShowVariantByTask.h  CommandHeaderList.h  CommandSQL.h  ConsolePrinter.h  Database.h  FTXUI.h  Git.h  (+7 more)
src/: BuilderSQL.cpp  CMakeLists.txt  ChatBotClient.cpp  ChatBotServer.cpp  ChatbotConfig.h.in  ClientUtility.cpp  CmdAddGroup.cpp  CmdAddStudent.cpp  CmdAddTask.cpp  CmdAddVariant.cpp  CmdChangeGroup.cpp  CmdChangeStudentGroup.cpp  CmdChangeStudentInitials.cpp  CmdChangeStudentName.cpp  CmdChangeTask.cpp  CmdChangeVariant.cpp  CmdDeleteGroup.cpp  CmdDeleteStudent.cpp  CmdDeleteStudentsFromGroup.cpp  CmdDeleteTask.cpp  CmdDeleteVariant.cpp  CmdGetCameraFrame.cpp  CmdShowAllResults.cpp  CmdShowAllStudents.cpp  CmdShowAllTasks.cpp  CmdShowAllVariants.cpp  CmdShowGroups.cpp  CmdShowResultByStudentTask.cpp  CmdShowResultsByStudent.cpp  CmdShowResultsByTask.cpp  CmdShowStudentsFromGroup.cpp  CmdShowTask.cpp  CmdShowVariant.cpp  CmdShowVariantByTask.cpp  CommandSQL.cpp  ConsolePrinter.cpp  Database.cpp  FTXUI.cpp  Git.cpp  GitClone.cpp  (+4 more)
tests/: BuilderSQLTest.cpp  CMakeLists.txt  CommandTest.cpp  DatabaseTest.cpp  LogicTeacherTest.cpp  ParserStudentTest.cpp  ParserTeacherTest.cpp  QueryTest.cpp
